Don't compile bootstrap for site changes

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/layout.min.css" rel="stylesheet" media="screen">
 
+
+
 </head>
 <body>
 
@@ -33,7 +35,7 @@
 <div class="container">
 
     <div class="home-header">
-        <h1>Here we go !</h1>
+        <h1>Here we go ! coucou eh </h1>
         <p class="lead">Voici un super template</p>
     </div>
 
@@ -50,6 +52,9 @@
 
 <!-- Custom js for this page-->
 <script src="js/index.min.js"></script>
+
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
 
 </body>
 </html>
